# Sol2D-Texture-Packer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cli/Sol2dTexturePackerCli/: Application.h  ExitCodes.h  IO.h  Main.cpp  NoopApplication.h  NopApplication.h  PackApplication.cpp  PackApplication.h  UnpackApplication.cpp  UnpackApplication.h
gui/Sol2dTexturePackerGui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BusyDialog.cpp  BusyDialog.h  BusyDialog.ui  BusySmartThread.cpp  BusySmartThread.h  GraphicsView.cpp  GraphicsView.h  ImageFormat.h  LambdaThread.cpp  LambdaThread.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  Settings.cpp  Settings.h  SpriteAnimationPipe.h  SpriteListWidget.cpp  SpriteListWidget.h  SpriteListWidget.ui  SpritePackerWidget.cpp  SpritePackerWidget.h  SpriteSheetSplitterWidget.cpp  SpriteSheetSplitterWidget.h  SpriteSheetSplitterWidget.ui  TabWidget.cpp  TabWidget.h  TransparentGraphicsPixmapItem.cpp  TransparentGraphicsPixmapItem.h  ZoomModel.cpp  ZoomModel.h  ZoomWidget.cpp  ZoomWidget.h  ZoomWidget.ui
gui/Sol2dTexturePackerGui/Animator/: SpriteAnimationWidget.cpp  SpriteAnimationWidget.h  SpriteAnimationWidget.ui
gui/Sol2dTexturePackerGui/Packer/: SpritePackerWidget.cpp  SpritePackerWidget.h  SpritePackerWidget.ui
gui/Sol2dTexturePackerGui/Resources/: Resources.qrc
gui/Sol2dTexturePackerGui/Resources/Reshot/: LICENSE.txt
gui/Sol2dTexturePackerGui/Resources/Reshot/Box/: SOURCE.txt
gui/Sol2dTexturePackerGui/Resources/Reshot/GridView/: SOURCE.txt
gui/Sol2dTexturePackerGui/Splitter/: AtlasPropertyEditorWidget.cpp  AtlasPropertyEditorWidget.h  AtlasPropertyEditorWidget.ui  GridPropertyEditorWidget.cpp  GridPropertyEditorWidget.h  GridPropertyEditorWidget.ui  SpriteSheetSplitterWidget.cpp  SpriteSheetSplitterWidget.h  SpriteSheetSplitterWidget.ui
lib/LibSol2dTexturePacker/: Def.h  Exception.h  Frame.h  Sprite.h  Texture.h
lib/LibSol2dTexturePacker/Atlas/: Atlas.h  AtlasSerializer.cpp  AtlasSerializer.h  DefaultAtlasSerializer.cpp  DefaultAtlasSerializer.h  Frame.h  RawAtlas.h  Sol2dAtlasSerializer.cpp  Sol2dAtlasSerializer.h
lib/LibSol2dTexturePacker/Pack/: AtlasPack.cpp  AtlasPack.h  GridPack.cpp  GridPack.h  Pack.cpp  Pack.h
lib/LibSol2dTexturePacker/Packers/: AtlasPacker.cpp  AtlasPacker.h  GuillotineBinAtlaskPacker.cpp  GuillotineBinAtlaskPacker.h  MaxRectsBinAtlasPacker.cpp  MaxRectsBinAtlasPacker.h  MetaAtlasPacker.cpp  MetaAtlasPacker.h  OnlineAlgorithmAtlasPacker.cpp  OnlineAlgorithmAtlasPacker.h  RawAtlasPack.cpp  RawAtlasPack.h  ShelfBinAtlasPacker.cpp  ShelfBinAtlasPacker.h  SkylineBinAtlasPacker.cpp  SkylineBinAtlasPacker.h  SkylineBinPackAtlasPacker.cpp  SkylineBinPackAtlasPacker.h
lib/LibSol2dTexturePacker/Splitters/: AtlasSplitter.cpp  AtlasSplitter.h  GridSplitter.cpp  GridSplitter.h  Splitter.cpp  Splitter.h
